# cantstop

./: LICENSE.txt  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: python-package.yml
cantstop/: .gitignore  README.md  __init__.py
cantstop/agents/: __init__.py  rule_based_agent.py
cantstop/cantstop/: __about__.py
cantstop/cantstop/envs/: __init__.py  constants.py  gym_env.py
cantstop/envs/: constants.py  gym_env.py  tf_env.py
cantstop/tests/envs/: test_gym_env.py
tests/envs/: test_gym_env.py
